manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-dev
  namespace: keycloak
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: dev-bnxg.dsk.az
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: dev-bnxg.dsk.az
      tls:
        mode: Terminate
        certificateRefs:
          - name: dev-bnxg.dsk.az
            kind: Secret
            namespace: keycloak
