manifests/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: keycloak-tlsroute-dev
  namespace: keycloak
spec:
  parentRefs:
  - name: keycloak-dev
    sectionName: tls
  hostnames:
  - dev-bnxg.dsk.az
  rules:
  - backendRefs:
    - name: keycloak-dev-service
      namespace: keycloak
      port: 8443
